{
    "name": "Controls",
    "maps": [
        {
            "name": "Gameplay",
            "id": "09157c0f-15c7-4c14-a9eb-5828b86df79e",
            "actions": [
                {
                    "name": "LeftClick",
                    "type": "Button",
                    "id": "be699053-78c7-4f19-94ff-38b75fffbbe6",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "RightClick",
                    "type": "Button",
                    "id": "07272480-7a48-4c89-a6e0-01f3b7dfd203",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "MousePos",
                    "type": "Value",
                    "id": "125d5d77-92ab-499c-8806-bfe156fe3f4f",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "DeleteShortcut",
                    "type": "Button",
                    "id": "f106530c-65b4-4466-937d-9e7b3f0d48fe",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "Shift",
                    "type": "Button",
                    "id": "a6557974-4861-43b6-a3a3-a0f918638939",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": ""
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "901c7562-2d71-4cbb-87c4-e3cb2f9cb689",
                    "path": "<Mouse>/leftButton",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "LeftClick",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "905d64bc-4605-4727-b2f3-877bb96b550b",
                    "path": "<Mouse>/rightButton",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "RightClick",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "998da95d-0a71-4f4f-8888-ccc79f16a056",
                    "path": "<Mouse>/position",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "MousePos",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "Button With One Modifier",
                    "id": "48a92b15-95ab-486d-b9b2-96ccff26efd0",
                    "path": "ButtonWithOneModifier",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "DeleteShortcut",
                    "isComposite": true,
                    "isPartOfComposite": false
                },
                {
                    "name": "modifier",
                    "id": "5db6958a-f963-4e03-ab49-f2358c777ea9",
                    "path": "<Keyboard>/leftShift",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "DeleteShortcut",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "button",
                    "id": "b310743c-c78d-47c6-a6ff-492aad01d13b",
                    "path": "<Mouse>/leftButton",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "DeleteShortcut",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "",
                    "id": "74dabb7e-45c9-43af-af43-a05a7f5682a4",
                    "path": "<Keyboard>/leftShift",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Shift",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": []
}